Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66003

Scene2D example crashes on exit with 'QThread: Destroyed while thread is still running'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.5, 5.10.1
    • 5.9.4, 5.10.1
    • Qt3D
    • None
    • Ubuntu 16.04
      qt3d branch: 5.10
    • 564dfd87c5b1317dcf9fbc4d1c8d858c72513421 31f424bb81cd2583920d3d521e1e01f01c2d28e2

    Description

      Running and closing the scene2d example crashes with the message

      'QThread: Destroyed while thread is still running'

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            anmaatta Antti Määttä
            dragly Svenn-Arne Dragly
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes