src/quick3d/quick3dscene2d/items/scene2d.cpp
@@ -121,7 +121,7 @@ Scene2D::Scene2D()
     , m_mouseEnabled(true)
     , m_renderPolicy(Qt3DRender::Quick::QScene2D::Continuous)
 {
-    renderThreadClientCount->fetchAndAddAcquire(1);
+
 }
 
 Scene2D::~Scene2D()
@@ -143,6 +143,8 @@ void Scene2D::initializeSharedObject()
                 || m_sharedObject->m_renderManager->thread() == QThread::currentThread()) {
             return;
         }
+
+        renderThreadClientCount->fetchAndAddAcquire(1);
 
         renderThread->setObjectName(QStringLiteral("Scene2D::renderThread"));
         m_renderThread = renderThread;
@@ -411,10 +413,11 @@ void Scene2D::cleanup()
         m_sharedObject->wake();
         m_sharedObject = nullptr;
     }
-
-    renderThreadClientCount->fetchAndSubAcquire(1);
-    if (renderThreadClientCount->load() == 0)
-        renderThread->quit();
+    if (m_renderThread) {
+        renderThreadClientCount->fetchAndSubAcquire(1);
+        if (renderThreadClientCount->load() == 0)
+            renderThread->quit();
+    }
 }
 
 
